--- a/blendify/src/Views/SignInView/SignInView.css
+++ b/blendify/src/Views/SignInView/SignInView.css
@@ -11,17 +11,17 @@
 }
 
 
-/* body { */
-    /* font-family: 'Arial', sans-serif; */
-    /* background-color: #121212; */
-    /* background-image:  */
-                      /* linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, .3)), Black overlay gradient */
-                      /* linear-gradient(120deg, rgba(57, 255, 20, 0.05), rgba(57, 255, 20, 0.2), rgba(57, 255, 20, 0.05)),  */
-                      /* repeating-radial-gradient(circle at 1em 1em, rgba(57, 255, 20, 0.03), rgba(57, 255, 20, 0.03) 5px, transparent 5px, transparent 10px); */
-    /* background-size: 300% 300%; */
-    /* animation: gradientBG 6s ease infinite; */
-    /* color: #f4f5f7; */
-/* } */
+body {
+    font-family: 'Arial', sans-serif;
+    background-color: #121212;
+    background-image: 
+        /*linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, .4)),*/
+        linear-gradient(120deg, rgba(151, 110, 248, 0.05), rgba(151, 110, 248, 0.2), rgba(151, 110, 248, 0.05)), 
+        repeating-radial-gradient(circle at 1em 1em, rgba(151, 110, 248, 0.03), rgba(151, 110, 248, 0.03) 5px, transparent 5px, transparent 10px);
+    background-size: 300% 300%;
+    animation: gradientBG 6s ease infinite;
+    color: #f4f5f7;
+}
 
 .signin-view {
     display: flex;
@@ -50,10 +50,10 @@
 }
 
 .app-name {
-    font-size: 3rem; 
+    font-size: 4rem; 
     font-weight: bold; 
-    color: #39ff14;
-    text-shadow: 0 0 10px rgba(57, 255, 20, 0.7), 0 0 15px rgba(57, 255, 20, 0.5); /* Green glow effect */
+    color: #976EF8;
+    text-shadow: 0 0 10px rgba(151, 110, 248, 0.7), 0 0 15px rgba(151, 110, 248, 0.5); /* glow */
     margin-bottom: 2rem;
 }
 
@@ -80,8 +80,8 @@
 }
 
 .signin-view input:focus {
-    border-color: #39ff14;
-    box-shadow: 0 0 10px rgba(57, 255, 20, 0.8);
+    border-color: #976EF8;
+    box-shadow: 0 0 10px rgba(151, 110, 248, 0.8);
     transform: scale(1.02);  /* Zoom in effect on focus */
     outline: none;
 }
@@ -89,7 +89,7 @@
 .signin-view button {
     padding: 0.7rem 1rem;
     font-size: 1rem;
-    background-color: #39ff14;
+    background-color: #976EF8;
     color: #121212;
     border: none;
     border-radius: 8px;
@@ -108,7 +108,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(57, 255, 20, 0.2);
+    background-color: rgba(151, 110, 248, 0.2);
     transform: translateY(-100%);
     transition: transform 0.3s ease;
 }
@@ -118,9 +118,9 @@
 }
 
 .signin-view button:focus, .signin-view button:hover {
-    background-color: #2eb50a;
+    background-color: #8151DB;
     outline: none;
-    box-shadow: 0 8px 25px rgba(57, 255, 20, 0.4);
+    box-shadow: 0 8px 25px rgba(151, 110, 248, 0.4);
 }
 
 .signin-view button:active {
@@ -135,6 +135,19 @@
     left: -5px;
     right: -5px;
     height: 5px;
-    background-color: #2a990d; /* Slightly darker shade of green */
+    background-color: #6E3AC9;
     border-radius: 0 0 8px 8px;
+}
+
+.spotify-login-text {
+    display: flex;
+    align-items: center;
+    gap: 0.2rem; /* Space between the logo and the text */
+    font-size: 1.5rem; /* Adjust as per your need */
+    margin-bottom: 2rem; /* Space between this and the form, adjust as required */
+}
+
+.spotify-logo {
+    width: 32px; /* Adjust based on your logo's appearance */
+    height: 32px; /* Adjust based on your logo's appearance */
 }
