--- a/blendify/src/App.css
+++ b/blendify/src/App.css
@@ -7,11 +7,11 @@
   pointer-events: none;
 }
 
-/* @media (prefers-reduced-motion: no-preference) {
+@media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-} */
+}
 
 header {
   display: flex;
@@ -47,11 +47,11 @@ header {
   color: #61dafb;
 }
 
-/* @keyframes App-logo-spin {
+@keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-} */
+}
