--- a/blendify/src/App.css
+++ b/blendify/src/App.css
@@ -15,17 +15,15 @@
 
 header {
   display: flex;
-  justify-content: center;
-  background: rgb(0, 0, 0);
+  background: #1E1E1E;
   text-align: center;
   margin: 0;
   transition: opacity 5s;
   font-family: "Oswald", sans-serif;
   color: white;
   grid-column: 1 / span 2;
-  padding: 10px 5px;
+  padding: 15px 10px;
 }
-
 
 .App-header {
   background-color: #282c34;
