--- a/blendify/src/Views/HomeView/HomeView.css
+++ b/blendify/src/Views/HomeView/HomeView.css
@@ -1,26 +1,29 @@
 header {
-    width: 100%;
-    z-index: 1;
-    background-color: #242424; /* Add a background color for visibility across the full width */
-    padding: 10px 0; /* Add some vertical padding to give space to your header content */
-    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2); /* Optional: Adds a subtle shadow for a slightly lifted appearance */
-    position: fixed; /* Optional: Fix the header at the top of the page */
-    top: 0; /* Optional: Ensure it's at the top */
+  width: 100%;
+  z-index: 1;
+  background-color: #242424; /* Add a background color for visibility across the full width */
+  padding: 10px 0; /* Add some vertical padding to give space to your header content */
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2); /* Optional: Adds a subtle shadow for a slightly lifted appearance */
+  position: fixed; /* Optional: Fix the header at the top of the page */
+  top: 0; /* Optional: Ensure it's at the top */
 }
 .home-view-wrapper {
-    background-color: #343434;
+  background-color: #343434;
 }
 .search-text {
-    font-size: 32px; /* Adjust to desired size */
-    color: rgba(255, 255, 255, 1); /* White with 80% opacity */
-    margin-bottom: 15px;
+  font-size: 32px; /* Adjust to desired size */
+  color: rgba(255, 255, 255, 1); /* White with 80% opacity */
+  margin-bottom: 15px;
 }
 .home-view {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    position: relative;
-    padding-top: 60px; /* Add a top padding equal to your header's height to prevent content hiding behind it */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  position: relative;
+  padding: 60px; /* Add a top padding equal to your header's height to prevent content hiding behind it */
+}
+
+#info1 {
 }
