CSS Elements, repuprose for songs later. General

--- a/blendify/src/Components/Info.css
+++ b/blendify/src/Components/Info.css
@@ -1,5 +1,11 @@
 .searchTitle {
   text-align: center;
+  color: white; /* Text color */
+  padding: 15px 20px; /* Reduced padding */
+  font-size: 1.5em; /* Font size */
+  display: inline-block; /* Make the box fit the text width */
+  margin: 1.5%;
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5); /* Text shadow */
 }
 
 .searchAlbumName {
@@ -9,9 +15,17 @@
 .searchAlbumInfo {
   text-align: center;
   color: white;
+  background: #161616; /* Light gray background */
   border: 1px solid white;
   border-radius: 8px;
   padding: 5px;
+  transition: transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), box-shadow 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.searchAlbumInfo:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  transform: scale(1.02); /* Increase size by 5% on hover */
 }
 
 .album-name {
