--- a/blendify/src/Views/HomeView/HomeView.css
+++ b/blendify/src/Views/HomeView/HomeView.css
@@ -1,14 +1,21 @@
 header {
   width: 100%;
-  z-index: 1;
   background-color: #242424; /* Add a background color for visibility across the full width */
-  padding: 10px 0; /* Add some vertical padding to give space to your header content */
   box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2); /* Optional: Adds a subtle shadow for a slightly lifted appearance */
   position: fixed; /* Optional: Fix the header at the top of the page */
   top: 0; /* Optional: Ensure it's at the top */
+  box-shadow: 0 6px 6px rgba(0, 0, 0, 0.2);
+}
+body {
+  cursor: default;
+}
+/* Change the cursor to pointer (hand) when hovering over buttons */
+button:hover {
+  cursor: pointer;
 }
 .home-view-wrapper {
-  background-color: #343434;
+  background: linear-gradient(to bottom, #343434, #000000);
+  height: 100%;
 }
 .search-text {
   font-size: 32px; /* Adjust to desired size */
@@ -20,7 +27,7 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  
   position: relative;
 }
 
@@ -31,4 +38,21 @@ header {
 }
 
 #info1 {
+}
+
+/* styles.css */
+.logout-button {
+  background: #8151DB;
+  color: white;
+  padding: 7px 15px; /* Adjust the padding to make the space smaller */
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: background 0.3s ease-in-out;
+}
+
+.logout-button:hover {
+  background: #6A3DBD;
+  /* You can add additional hover effects here */
 }
