--- a/blendify/src/Components/Info.css
+++ b/blendify/src/Components/Info.css
@@ -8,36 +8,38 @@
   text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5); /* Text shadow */
 }
 
-.searchSongmName {
+.searchSongName {
   text-align: center;
 }
 
 .searchSongInfo {
+  display:flex;
+  justify-content: space-between; /* Space the text and buttons evenly */
+  align-items: center; 
   text-align: center;
   color: white;
   background: #161616;
-  border: 1px solid white;
   border-radius: 8px;
   padding: 7px 80px; /* Increased horizontal padding */
-  margin: 7px; /* Adjust the margin between buttons */
+  margin: 14px; /* Adjust the margin between buttons */
   font-size: 15px; /* Slightly smaller font size */
   transition: transform 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275), box-shadow 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), background-color 0.3s;
   box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, .5);
-
+  cursor: 'pointer'
 }
 
 .searchSongInfo:hover {
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.034);
   transform: scale(1.00) translateY(-2px);
 }
 
 .song-name {
-  color: #976ef8;
+  color: #ffffff;
   font-weight: bold;
 }
 
 .artist-name {
-  color: white;
+  color: rgba(255, 255, 255, 0.637);
 }
 
 .titletext {
@@ -59,10 +61,8 @@
   display:flex;
   justify-content: space-between; /* Space the text and buttons evenly */
   align-items: center; 
-  text-align: center;
   color: white;
   background: #161616;
-  border: .5px solid white;
   border-radius: 8px;
   padding: 7px 80px; /* Increased horizontal padding */
   margin: 14px; /* Adjust the margin between buttons */
@@ -119,7 +119,7 @@
 
 /* Styles for the YouTube button */
 .youtube-button {
-  margin-left: 10px;
+  margin-left: 5px;
   padding: 4px 15px; /* Adjust the padding to reduce the height */
   background-color: #ff0000;
   color: #ffffff;
@@ -138,7 +138,7 @@
 
 /* Styles for the Spotify button */
 .spotify-button {
-  margin-left: 10px;
+  margin-left: 5px;
   margin-right: -20px;
   padding: 4px 15px; /* Adjust the padding to reduce the height */
   background-color: #20da61;
@@ -166,3 +166,9 @@
   display: flex;
   gap: 10px;
 }
+.cover-art{
+  width: 65px;
+  height: 65px;
+  padding-right:20px;
+}
+
