--- a/blendify/src/Components/Sidebar.css
+++ b/blendify/src/Components/Sidebar.css
@@ -14,18 +14,18 @@
 
 /* Color/shape of burger icon bars on hover*/
 .bm-burger-bars-hover {
-  background: #a90000;
+  background: #6A3DBD;
 }
 
 /* Position and sizing of clickable cross button */
 .bm-cross-button {
-  height: 24px;
-  width: 24px;
+  height: 50px;
+  width: 50px;
 }
 
 /* Color/shape of close button cross */
 .bm-cross {
-  background: #bdc3c7;
+  background: #ffffff;
 }
 
 /*
@@ -39,9 +39,9 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 /* General sidebar styles */
 .bm-menu {
-  background: #373a47;
-  padding: 2.5em 1.5em 0;
-  font-size: 1.15em;
+  background: #242424;
+  padding: 1em 1.5em 0;
+  font-size: 1.60em;
 }
 
 /* Morph shape necessary with bubble or elastic */
@@ -51,7 +51,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 /* Wrapper for item list */
 .bm-item-list {
-  color: #b8b7ad;
+  color: #ffffff;
   padding: 0.8em;
 }
 
@@ -59,15 +59,15 @@ Note: Beware of modifying this element as it can break the animations - you shou
 .bm-item {
   display: inline-block;
 
-  color: #d1d1d1;
-  margin-bottom: 10px;
+  color: #ffffff;
+  margin-bottom: 30px;
   text-align: left;
   text-decoration: none;
   transition: color 0.2s;
 }
 
 .bm-item:hover {
-  color: #ffffff;
+  color: #6A3DBD;
 }
 
 /* Styling of overlay */
