--- a/blendify/src/Views/HomeView/HomeView.css
+++ b/blendify/src/Views/HomeView/HomeView.css
@@ -18,7 +18,8 @@ li:hover {
   height: 100%;
 }
 .search-text {
-  font-size: 32px; /* Adjust to desired size */
+  font-size: 40px; /* Adjust to desired size */
+  font-weight: 400;
   color: rgba(255, 255, 255, 1); /* White with 80% opacity */
   margin-bottom: 15px;
   padding-top: 5%;
@@ -28,7 +29,6 @@ li:hover {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  
   position: relative;
 }
 
@@ -41,14 +41,18 @@ li:hover {
 /* styles.css */
 .logout-button {
   background: #8151DB;
+  font-size: 15px;
   color: white;
   margin-left: 25px;
-  padding: 7px 15px; /* Adjust the padding to make the space smaller */
+  padding: 10px 35px; /* Adjust the padding to make the space smaller */
   border: none;
-  border-radius: 5px;
+  border-radius: 100px;
   cursor: pointer;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
   transition: background 0.3s ease-in-out;
+  position: relative;
+  top: -2px;
+
 }
 
 .logout-button:hover {
@@ -69,4 +73,14 @@ li:hover {
   margin-left: 70px;
   position: relative;
   top: -10px;
+}
+
+.blendify-text {
+  font-size: 40px; /* Adjust to desired size */
+  color: rgba(255, 255, 255, 1); /* White with 80% opacity */
+  margin-left: 20px;
+  text-decoration: none !important;
+  font-weight: bold;
+  position: relative;
+  top: -7px;
 }
