--- a/blendify/src/Views/SideBarPages/Devs.css
+++ b/blendify/src/Views/SideBarPages/Devs.css
@@ -3,12 +3,15 @@
   color: white;
 }
 
-.devs-content h2,
-.devs-content p {
-  color: white;
+.devs-content h2 {
+  font-size: 40px; /* Adjust to desired size */
+  font-weight: 400;
+  color: rgba(255, 255, 255, 1); /* White with 80% opacity */
+  margin-bottom: 15px;
+  padding-top: 0%;
 }
 
-header {
-  background-color: #242424; /* Add a background color for visibility across the full width */
-  height: 30px; /* Set the height of the header */
+.devs-content p {
+  font-size: 20px; /* Adjust to desired size */
+  padding: 0 10%;
 }
